src/tests/ci/assignment_5_functions/invalid_semantic/05_conflicting_declaration_definition.c
int add(int a);

int add(float a) {
    return 1;
}

int main() {
    return 0;
}